--- a/index.html
+++ b/index.html
@@ -1,97 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Wedding baohy</title>
-<style>
-  body {
-    margin: 0;
-    padding: 0;
-    background-image: url('Common/lotus-background.png'); /* Replace with the path to your background image */
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    overflow: hidden;
-  }
-  .container-wrapper {
-    position: relative;
-  }
-  .envelope-container, .baohy-container .invitation-container{
-    perspective: 1000px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-  }
-  .envelope-container {
-    transform: translate(-50%, -50%);
-  }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Wedding baohy</title>
+  <script src="https://raw.githubusercontent.com/akzhy/Vara/master/src/vara.min.js"></script>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-image: url('Common/lotus-background.png'); /* Replace with the path to your background image */
+      background-size: cover;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      overflow: hidden;
+    }
+    .container-wrapper {
+      position: relative;
+    }
+    .envelope-container, .baohy-container .invitation-container{
+      perspective: 1000px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+    }
+    .envelope-container {
+      transform: translate(-50%, -50%);
+    }
 
-  .baohy-container {
-    visibility: hidden;
-    opacity: 0;
-    transform: translate(0%, -50%);
-  }
-  .invitation-container {
-    visibility: hidden;
-    opacity: 0;
-    transform: translate(0%, 50%);
-  }
+    .baohy-container {
+      visibility: hidden;
+      opacity: 0;
+      transform: translate(0%, -50%);
+    }
+    .invitation-container {
+      visibility: hidden;
+      opacity: 0;
+      transform: translate(0%, 50%);
+    }
 
-  .envelope-flipper, .baohy-flipper, .invitation-flipper {
-    height: 600px;
-    width: 360px;
-    transition: transform 1.2s;
-    transform-style: preserve-3d;
-  }
-  .envelope-flipper {
-    z-index: 3;
-  }
-  .baohy-flipper {
-    z-index: 2;
-    transform-origin: left;
-  }
-  .invitation-flipper {
-    z-index: 2;
-  }
+    .envelope-flipper, .baohy-flipper, .invitation-flipper {
+      height: 600px;
+      width: 360px;
+      transition: transform 1.2s;
+      transform-style: preserve-3d;
+    }
+    .envelope-flipper {
+      z-index: 3;
+    }
+    .baohy-flipper {
+      z-index: 2;
+      transform-origin: left;
+    }
+    .invitation-flipper {
+      z-index: 2;
+    }
 
-  .front, .back {
-    backface-visibility: hidden;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-  }
-  .front {
-    z-index: 2;
-    transform: rotateY(0deg);
-  }
-  .back {
-    transform: rotateY(-180deg);
-  }
-  .envelope-container:hover .envelope-flipper, .envelope-container.hover .envelope-flipper {
-    transform: rotateY(-180deg);
-  }
-  .baohy-container:hover .baohy-flipper, .baohy-container.hover .baohy-flipper {
-    transform: rotateY(180deg);
-  }
-  .invitation-container:hover .invitation-flipper, .invitation-container.hover .invitation-flipper {
-    transform: rotateY(-180deg);
-  }
+    .front, .back {
+      backface-visibility: hidden;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+    }
+    .front {
+      z-index: 2;
+      transform: rotateY(0deg);
+    }
+    .back {
+      transform: rotateY(-180deg);
+    }
+    .envelope-container:hover .envelope-flipper, .envelope-container.hover .envelope-flipper {
+      transform: rotateY(-180deg);
+    }
+    .baohy-container:hover .baohy-flipper, .baohy-container.hover .baohy-flipper {
+      transform: rotateY(180deg);
+    }
+    .invitation-container:hover .invitation-flipper, .invitation-container.hover .invitation-flipper {
+      transform: rotateY(-180deg);
+    }
 
-  .invite-text {
-    font-family: 'Dancing Script', cursive;
-    font-size: 22px;
-    font-weight: bold;
-    position: absolute;
-    top: 44%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    /* no wrap */
-    white-space: nowrap;
-  }
-</style>
+    .invite-text {
+      /* font-family: 'Albula Pro', cursive;
+      font-size: 22px;
+      font-weight: bold;
+      position: absolute;
+      top: 44%;
+      left: 50%;
+      transform: translate(-50%, -50%); */
+      white-space: nowrap;
+      /* visibility: hidden; */
+      /* opacity: 0; */
+    }
+  </style>
 </head>
 <body>
 
@@ -119,8 +121,8 @@
         </div>
     </div>
 
-    <div class="invite-text" id="invitation_text">
-      Guest Invitation Text
+    <div id="invitation_text">
+      <!-- Guest Invitation Text -->
     </div>
     
 
@@ -134,17 +136,71 @@
         return urlParams.get(param);
     }
 
-    // Function to display the guest's name
-    function displayGuestName() {
-        const guestId = getQueryParam('guestid');
-        // TODO: Replace this with actual logic to fetch the guest's name using the guestId
-        // For demonstration, let's assume a guest name is returned for a given ID
-        const guestName = guestId ? 'Guest Name for ID ' + guestId : 'Guest Name Not Found';
-        document.getElementById('guestName').innerText = guestName;
+    const guestId = getQueryParam('guestid');
+
+    function HandWriteText(displayText) {
+        console.log("Trying to hand-write text: " + displayText)
+        const FontSize = 22
+        var vara = new Vara(
+          "#invitation-text",
+          "https://raw.githubusercontent.com/akzhy/Vara/master/fonts/Satisfy/SatisfySL.json",
+          [
+            {
+              text: displayText,
+              y: 150,
+              fromCurrentPosition: { y: false },
+              duration: 2000,
+            }
+          ],
+          {
+            strokeWidth: 2,
+            color: "blue",
+            fontSize: FontSize,
+            textAlign: "center",
+          }
+        );
+        vara.ready(function () {
+          var erase = false;
+          vara.animationEndEvent(function () {
+            console.log("Animation End");
+          });
+        });
     }
-    if (getQueryParam('guestid')) {
-        displayGuestName();
+
+    function fetchInvitationText(guestId) {
+      const csvUrl = "https://raw.githubusercontent.com/ThangLC304/ThangLC304.github.io/main/Common/WeddingGuestList%20-%20InviteData.csv"; // Replace with the URL to your hosted CSV file
+
+      fetch(csvUrl)
+        .then(response => response.text())
+        .then(csvText => {
+          const rows = csvText.split('\n');
+          for (let i = 1; i < rows.length; i++) { // Skip header row
+            const cells = rows[i].split(',');
+            if (cells[3] === guestId) { // Column D (Invite_ID) matches guestId
+              console.log("Found guestId: " + guestId)
+              console.log("Invitation text: " + cells[2])
+              // HandWriteText(cells[2]);
+              HandWriteText("Than moi vc Suke")
+            }
+          }
+        })
+        .catch(error => console.error('Error fetching CSV:', error));
     }
+
+    // function fetchAndDisplayInvitationText(guestId) {
+    //   var fetched_text = fetchInvitationText(guestId);
+    //   if (fetched_text) {
+    //     document.getElementById('invitation_text').innerHTML = fetched_text;
+    //   } else {
+    //     document.getElementById('invitation_text').innerHTML = 'Không tìm thấy mã mời';
+    //   }
+    // }
+
+    // const guestId = getQueryParam('guestid');
+    // if (guestId) {
+    //   fetchAndDisplayInvitationText(guestId);
+    // }
+
 
 
     function setImageSources(location) {
@@ -181,6 +237,7 @@
     const baohyObject = document.getElementById('BaoHy');
     const invitationContainer = document.getElementById('Invitation_Container');
     const invitationObject = document.getElementById('Invitation');
+    const inviteTextObject = document.getElementById('invitation_text');
 
     function showBaoHy() {
         baohyContainer.style.visibility = 'visible'; // Make the element visible
@@ -195,6 +252,13 @@
     }
 
     
+
+    function showInviteText() {
+        inviteTextObject.style.visibility = 'visible';
+        inviteTextObject.style.opacity = '1';
+        inviteTextObject.style.transition = 'opacity 0.5s linear';
+    }
+
     envelopeObject.addEventListener('click', function() {
         // disable hovering
         this.onmouseenter = null;
@@ -215,10 +279,20 @@
         this.style.pointerEvents = 'none';
     });
 
-    // baohyObject.addEventListener('mouseenter', function() {
-    //     // move to the right half the size of the baohy and rotate 180deg to show the back
-    //     this.style.transform = 'rotateY(180deg)';
-    // });
+
+    baohyObject.addEventListener('mouseenter', function() {
+        // showInviteText();
+        fetchInvitationText(guestId);
+    });
+
+    invitationContainer.addEventListener('mouseenter', function() {
+        console.log('invitation mouse enter');
+    });
+
+    invitationContainer.addEventListener('mouseleave', function() {
+        console.log('invitation mouse leave');
+        inviteTextObject.style.visibility = 'hidden';
+    });
 
 </script>
 
