--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wedding baohy</title>
-  <script src="https://raw.githubusercontent.com/akzhy/Vara/master/src/vara.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vara@1.4.0/lib/vara.min.js" type="text/javascript"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vara@1.4.0/fonts/fontdir/fontname.json"></script>
   <style>
     body {
       margin: 0;
@@ -179,8 +180,8 @@
             if (cells[3] === guestId) { // Column D (Invite_ID) matches guestId
               console.log("Found guestId: " + guestId)
               console.log("Invitation text: " + cells[2])
-              // HandWriteText(cells[2]);
-              HandWriteText("Than moi vc Suke")
+              HandWriteText(cells[2]);
+              // HandWriteText("Than moi vc Suke")
             }
           }
         })
