--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wedding baohy</title>
-  <script src="https://cdn.jsdelivr.net/npm/vara@1.4.0/lib/vara.min.js" type="text/javascript"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vara@1.4.0/fonts/fontdir/fontname.json"></script>
+  <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Itim|Lobster|Montserrat:500|Noto+Serif|Nunito|Patrick+Hand|Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i|Roboto+Slab|Saira" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -83,7 +82,7 @@
     }
 
     .invite-text {
-      font-family: 'Albula Pro', cursive;
+      font-family: 'Dancing Script', cursive;
       font-size: 22px;
       font-weight: bold;
       position: absolute;
@@ -122,7 +121,7 @@
         </div>
     </div>
 
-    <div id="invitation_text">
+    <div class="invite-text" id="invitation_text">
       Guest Invitation Text
     </div>
     
@@ -212,14 +211,11 @@
               } else {
                 document.getElementById('invitation_text').innerHTML = 'Không tìm thấy mã mời';
               }
-              showInviteText();
             }
           }
         })
         .catch(error => console.error('Error fetching CSV:', error));
     }
-
-
 
     envelopeObject.addEventListener('click', function() {
         // disable hovering
@@ -244,7 +240,9 @@
 
     baohyObject.addEventListener('mouseenter', function() {
         // showInviteText();
+        // wait for 1.5s to show invitation-container
         fetchInvitationText(guestId);
+        setTimeout(showInviteText, 1500);
     });
 
     invitationContainer.addEventListener('mouseenter', function() {
