--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     const guestId = getQueryParam('guestid');
 
     // Guest Dict Start
-		guest_dict = {'18c3e4a787b': 'Thân mời vợ chồng Suke',
+		var guest_dict = {'18c3e4a787b': 'Thân mời vợ chồng Suke',
 			'18c3e547cd5': 'Thân mời vợ chồng Hưng Bi',
 			'18c3e505347': 'Thân mời vợ chồng Dú',
 			'18c3e53b4b4': 'Thân mời vợ chồng Tép',
