update guest list

--- a/index.html
+++ b/index.html
@@ -194,6 +194,8 @@
 
     const guestId = getQueryParam('guestid');
 
+    // check if committed
+
     // Guest Dict Start
 		guest_dict = {'18c3e4a787b': 'Thân mời vợ chồng Suke',
 			'18c3e547cd5': 'Thân mời vợ chồng Hưng Bi',
