--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             // document.getElementById('BaoHy').getElementsByClassName('back')[0].src = 'DaNang/BaoHy_Back.png';
             // document.getElementById('Invitation').getElementsByClassName('front')[0].src = 'DaNang/ThiepMoi_Front.png';
             // document.getElementById('Invitation').getElementsByClassName('back')[0].src = 'DaNang/ThiepMoi_Back.png';
-            document.getElementById('qr_code_img').setAttribute('src', 'DaNang/rosamia logo circle.png');
+            document.getElementById('qr_code_img').setAttribute('src', 'DaNang/rosamia logo circle NEW.png');
             document.getElementById('url').setAttribute('href', locationDN);
             document.getElementById('url').innerHTML = locationtextDN;
             showQR = true;
